[package]
name = "ynabber"
version = "0.1.0"
authors = ["Rich Churcher <rich.churcher@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.11", features = ["toml"] }
csv = "1.1"
reqwest = { version = "0.11.2", features = ["json"] }
rusty-money = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_with = "1.3.1"
tokio = { version = "1", features = ["full"] }
ynab-api = "3.0.0"
