[package]
name = "ynabber"
version = "0.2.0"
authors = ["Rich Churcher <rich.churcher@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.13", features = ["toml"] }
csv = "1.1"
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
url = "2.3"
ynab-api = { path = "./ynab-api" }
